# eMarket

./: .gitignore  Makefile  README.md  clear.sh  docker-compose.yaml  helmfile.yaml  init-clickhouse.sh  prometheus.yml  skaffold.yaml  test_api_mongo.py
Market/: Dockerfile  pyproject.toml
Market/app/: cli.py  gen_postgres_data.py  main.py  metrics.py
Market/app/api/: payment.py
Market/app/api/v1/: __init__.py  accounts.py  cart.py  categories.py  main.py  markets.py  products.py  reviews.py  roles.py  sellers.py  users.py
Market/app/core/: config.py  extensions.py
Market/app/data/gen1/: roles.csv
Market/app/db/: mongodb.py  postgres.py
Market/app/dependencies/: main.py
Market/app/dependencies/services/: __init__.py  auth_service_factory.py  pubsub_factory.py  role_service_factory.py  seller_service_factory.py  token_storage_factory.py  user_role_service_factory.py  user_service_factory.py
Market/app/metrics/: __init__.py  decorators.py  middleware.py  update_total_users.py
Market/app/migrations/: env.py
Market/app/migrations/versions/: 1657390caf33_update.py  2a610a02006b_update.py  2b8f6a70033f_update.py  2e71c5a913a8_create_users_table.py  5f4aebf23369_update.py  6a4405399c8e_update.py  c9adcf0dcc3f_update.py  efc4d24f4b4a_update.py  f354bb94700f_update.py
Market/app/models/: __init__.py  cart.py  category.py  order.py  product.py  review.py  role.py  roles.py  seller_info.py  social_account.py  user.py  user_history.py  user_role.py  users.py
Market/app/repositories/: base.py  cart_repository.py  category_repository.py  postgre.py  product_repository.py  review_repository.py  role.py  seller.py  user.py
Market/app/schemas/: auth.py  base.py  cart.py  category.py  payment.py  product.py  result.py  review.py  role.py  seller.py  social.py  token.py  user.py
Market/app/services/: auth.py  cache.py  cart_service.py  category_service.py  kafka_service.py  order_service.py  payment_service.py  product_service.py  pubsub.py  review_service.py  role.py  seller.py  uow.py  user.py  user_role.py
Market/app/storages/: token.py
Market/app/tests/: test_grafana_activity.py  test_locust.py
Market/app/tests/models/: test_role.py  test_social_account.py  test_user.py  test_user_history.py  (+1 more)
StreamingProcessing/: Dockerfile  main.py  pyproject.toml
StreamingProcessing/app/: main.py
StreamingProcessing/app/utils/: clickhouse_client.py  config.py  consumer.py  data_service.py  scheamas.py
StreamingProcessing/utils/: config.py  consumer.py  scheamas.py
TestDataGeneration/: main.py  pyproject.toml
TestDataGeneration/app/: main.py
TestDataGeneration/app/utils/: config.py  generate.py  schemas.py
TestDataGeneration/utils/: generate.py  schemas.py
(+60 files in other folders)
