[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = ["JonAJ <jonajmail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = {extras = ["all"], version = "^0.34.0"}
sqlalchemy = "^2.0.39"
pydantic-settings = "^2.8.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
alembic = "^1.15.1"
asyncpg = "^0.30.0"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
