[project]
name = "streamingprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiochclient>=2.6.0",
    "aiohttp>=3.12.6",
    "aiokafka>=0.12.0",
    "faker>=37.3.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
]
